introduced instance conf settings

--- a/paneldb/server/templates/panels.html
+++ b/paneldb/server/templates/panels.html
@@ -2,5 +2,5 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-<h2>This is the app index page. Add stuff in here!</h2>
+<h2>This is the panels page!</h2>
 {% endblock %}
