--- a/paneldb/server/templates/base.html
+++ b/paneldb/server/templates/base.html
@@ -12,7 +12,42 @@
 </head>
 <body>
 	{% block body %}
-		{% block content %}{% endblock %}
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{url_for('gene_panels')}}">Gene panels</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="">Genes</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="">Genomic intervals</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="">Hostspots of variation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="">Baits</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="">Panel performance</a>
+					</li>
+				</ul>
+				<!--<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>-->
+			</div>
+		</nav>
+		{% block content %}
+		{% endblock %}
 	{% endblock %}
 
 	{% block js_btm %}
