--- a/paneldb/server/templates/baitsets.html
+++ b/paneldb/server/templates/baitsets.html
@@ -21,7 +21,7 @@
 
     <div class="input-group mb-3">
       <div class="custom-file">
-        <input type="file" class="custom-file-input" name="inputFile" id="inputfile" onchange="setfilename(this.value);" required>
+        <input type="file" accept=".bed, .txt, .csv" class="custom-file-input" name="inputFile" id="inputfile" onchange="setfilename(this.value);" required>
         <label class="custom-file-label" id="baiset_file_label" for="inputFile">Choose file</label>
       </div>
     </div>
@@ -32,7 +32,34 @@
 <h4>Available baitsets:</h4>
 
 <br><br>
-Submitted document: {{document}}
+Submitted document: {{document}} {{upload_folder}} <br>
+
+<div>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope=""col">Chromosome</th>
+              <th scope=""col">chr_start</th>
+              <th scope=""col">chr_stop</th>
+              <th scope=""col">length</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for line in bah %}
+              <tr>
+                <td>{{line.chromosome}}</td>
+                <td>{{line.chr_start}}</td>
+                <td>{{line.chr_stop}}</td>
+                <td>{{line.chr_stop|int - line.chr_start|int}}</td>
+              </tr>
+            {% endfor %}
+
+          </tbody>
+
+        </table>
+  {{bah}}
+
+</div>
 
 {% endblock %}
 
