--- a/paneldb/server/templates/baitsets.html
+++ b/paneldb/server/templates/baitsets.html
@@ -6,12 +6,40 @@
 <form action="{{ url_for('baitsets') }}" method="POST" id="submit_baitset" name="submit_baitset" enctype=multipart/form-data>
   <div class="form-group">
     <br>
-    <h4>Upload a new bait set</h4>
+    <h4>Upload a bait set</h4>
+    <br>
+
+    <!-- Radiobuttons for choosing between a new or a new version of bait-set-->
+    <div class="form-group">
+        <label class="control-label">Add a new bait-set or a new version of an existing one</label>
+        <div class="form-group">
+            <div class="form-check">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+            <label class="form-check-label" for="exampleRadios1">
+            New bait-set
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+            <label class="form-check-label" for="exampleRadios1">
+                New version of existing bait-set
+            </label>
+        </div>
+    </div>
+    <!--If the radiobutton new version has been selected, there shall be possible to select between the already existing
+    bait-sets in the databse, and a new version of that one shall be created-->
     <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="inputGroup-sizing-default">Bait set name</span>
       </div>
     <input type="text" class="form-control" aria-label="baitset_name" aria-describedby="inputGroup-sizing-default" required>
+    </div>
+    <div class="form-check form-check-inline">
+        <span class="input-group-text" id="inputGroup-sizing-default">Chromosome build</span>
+          <select class="form-control" id="chr_build">
+            <option>GRCh37</option>
+            <option>GRCh38</option>
+          </select>
     </div>
 
     <div class="form-group">
@@ -19,32 +47,9 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="2" ></textarea>
     </div>
 
-
-    <!-- Genomic build dropdown -->
-    <div class="dropdown">
-        <a class="btn btn-info dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Genomic Build
-        </a>
-
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">GRCh37</a>
-            <a class="dropdown-item" href="#">GRCh38</a>
-        </div>
-    </div>
-
-    <!-- testing
-    <select name="cars">
-        <option value="volvo">Volvo</option>
-         <option value="saab">Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-    </select> -->
-
-
-
     <div class="input-group mb-3">
       <div class="custom-file">
-        <input type="file" accept=".bed, .txt, .csv" class="custom-file-input" name="inputFile" id="inputfile" onchange="setfilename(this.value);" required>
+        <input type="file" accept=".bed, .txt, .csv, .xls, xlsx" class="custom-file-input" name="inputFile" id="inputfile" onchange="setfilename(this.value);" required>
         <label class="custom-file-label" id="baiset_file_label" for="inputFile">Choose file</label>
       </div>
     </div>
