--- a/paneldb/server/templates/baitsets.html
+++ b/paneldb/server/templates/baitsets.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-<form action="{{ url_for('baitsets') }}" method="POST" id="submit_baitset" name="submit_baitset" enctype=multipart/form-data>
+<form action="{{ url_for('server.baitsets') }}" method="POST" id="submit_baitset" name="submit_baitset" enctype=multipart/form-data>
   <div class="form-group">
     <br>
     <h4>Upload a bait set</h4>
@@ -74,6 +74,7 @@
               <th scope="col">version</th>
               <th scope="col">chr. build</th>
               <th scope="col">created</th>
+              <th scope="col">n. baits</th>
             </tr>
           </thead>
           <tbody>
@@ -84,11 +85,10 @@
                 <td>{{baitset.version}}</td>
                 <td>{{baitset.chr_build}}</td>
                 <td>{{baitset.created_at.strftime('%Y-%m-%d')}}</td>
+                <td>{{baitset.baits|length}}</td>
               </tr>
             {% endfor %}
-
           </tbody>
-
         </table>
 
 </div>
